# fastapi-filebased-routing.py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/advanced/: main.py
examples/advanced/app/(admin)/settings/: route.py
examples/advanced/app/api/[[version]]/users/: route.py
examples/advanced/app/events/: route.py
examples/advanced/app/files/[...path]/: route.py
examples/advanced/app/ws/chat/[room_id]/: route.py
examples/basic/: main.py
examples/basic/app/health/: route.py
examples/basic/app/users/: route.py
examples/basic/app/users/[user_id]/: route.py
examples/middleware/: main.py
examples/middleware/app/: _middleware.py
examples/middleware/app/(admin)/: _middleware.py
examples/middleware/app/(admin)/settings/: route.py
examples/middleware/app/api/: _middleware.py
examples/middleware/app/api/users/: route.py
examples/middleware/app/api/users/[user_id]/: route.py
examples/middleware/app/health/: route.py
src/fastapi_filebased_routing/: __init__.py  exceptions.py
src/fastapi_filebased_routing/core/: __init__.py  filter.py  importer.py  middleware.py  parser.py  scanner.py
src/fastapi_filebased_routing/fastapi/: __init__.py  router.py
tests/: conftest.py  test_conftest_fixtures.py
tests/integration/: __init__.py  test_dispatch_integration.py  test_error_scenarios.py  test_full_routing.py  test_middleware_errors.py  test_middleware_integration.py  test_route_filtering.py  test_security.py
tests/integration/concurrency/: conftest.py  test_auth_isolation.py  test_body_isolation.py  test_error_isolation.py  test_request_isolation.py
tests/integration/concurrency/fixtures/app/: main.py
tests/integration/concurrency/fixtures/app/routes/: _middleware.py
tests/integration/concurrency/fixtures/app/routes/api/: _middleware.py
tests/integration/concurrency/fixtures/app/routes/api/messages/: route.py
tests/integration/concurrency/fixtures/app/routes/api/protected/: _middleware.py  route.py
tests/integration/concurrency/fixtures/app/routes/echo/: route.py
tests/unit/: __init__.py  test_exceptions.py  test_public_api.py
tests/unit/core/: test_dispatch.py  test_filter.py  test_importer.py  test_middleware.py  test_middleware_chain.py  test_parser.py  test_scanner.py  test_smoke.py
tests/unit/fastapi/: __init__.py  test_router.py
(+3 files in other folders)
